Merge/sumas/entreamigos/03 (#1511)
* Merged PR 7837: feat(init): initial commit

initial commit fineract

Related work items: #1249, #1250, #1251, #1252, #1253, #1254, #1255, #1256, #1257, #1258, #1259, #1260, #1261, #1262, #1263, #1264, #1265, #1266, #1268, #1270, #1271, #1273, #1274, #1275, #1276, #1277, #1280, #1283, #1284, #1285, #1288, #1289, #1290, #1294, #1295, #1296, #1297

* initial commit deploy back fineract

* Merged PR 7838: add gradle 8.5 dockerfile

add gradle 8.5 dockerfile

Related work items: #29622

* Merged PR 7854: EA-5 Language independent pentaho

Todos permiten que pentaho se cargue en todos los idiomas.

Related work items: #29692

* Merged PR 7953: Sync fixes from fiter

Bug fixes and modifications

Related work items: #1327, #1333, #1338, #1339, #1340, #1343, #1344, #1345, #1347, #1348, #1349, #1350, #1351, #1352, #1353, #1354, #1355, #1356, #1357, #1358, #1361, #1362, #1363, #1364, #1365, #1366, #1367, #1368, #1369, #1371, #1374, #1375, #1381, #1382, #1383, #1384, #1385, #1388, #1391, #29692

* Merged PR 7999: Sync with fiter code 20122024

Related work items: #1338, #1339, #1340, #1343, #1344, #1345, #1347, #1348, #1349, #1350, #1351, #1352, #1353, #1354, #1355, #1356, #1357, #1358, #1361, #1362, #1363, #1364, #1365, #1366, #1367, #1368, #1369, #1371, #1374, #1375, #1381, #1382, #1383, #1384, #1385, #1388, #1391, #1403, #1417, #29692

* Merged PR 8025: EA-111 add missing indices

Se agregaron índices faltantes que causan fallas al abrir tablas de datos y también fallan en la apertura de perfiles de clientes.

Related work items: #30060

* Merged PR 8065: Sync repository with fiter 03-01-2025

Related work items: #1344, #1345, #1347, #1348, #1349, #1350, #1351, #1352, #1353, #1354, #1355, #1356, #1357, #1358, #1361, #1362, #1363, #1364, #1365, #1366, #1367, #1368, #1369, #1371, #1374, #1375, #1381, #1382, #1383, #1384, #1385, #1388, #1391, #1403, #1417, #1430, #1432, #1440, #1442, #1443, #1447, #1449,